@@ -18,70 +18,6 @@ end_package
 
 begin_import
 import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|SolrTestCaseJ4
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|util
-operator|.
-name|SimplePostTool
-operator|.
-name|PageFetcher
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|util
-operator|.
-name|SimplePostTool
-operator|.
-name|PageFetcherResult
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|junit
-operator|.
-name|Before
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|junit
-operator|.
-name|Test
-import|;
-end_import
-
-begin_import
-import|import
 name|java
 operator|.
 name|io
@@ -189,6 +125,70 @@ operator|.
 name|util
 operator|.
 name|Set
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|SolrTestCaseJ4
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|util
+operator|.
+name|SimplePostTool
+operator|.
+name|PageFetcher
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|util
+operator|.
+name|SimplePostTool
+operator|.
+name|PageFetcherResult
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Before
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Test
 import|;
 end_import
 
@@ -358,18 +358,34 @@ operator|new
 name|MockPageFetcher
 argument_list|()
 expr_stmt|;
+for|for
+control|(
 name|SimplePostTool
+name|mockable
+range|:
+operator|new
+name|SimplePostTool
+index|[]
+block|{
+name|t_web
+block|,
+name|t_file_auto
+block|}
+control|)
+block|{
+name|mockable
 operator|.
 name|pageFetcher
 operator|=
 name|pf
 expr_stmt|;
-name|SimplePostTool
+name|mockable
 operator|.
 name|mockMode
 operator|=
 literal|true
 expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Test
@@ -1026,7 +1042,7 @@ name|num
 argument_list|)
 expr_stmt|;
 comment|// Without respecting robots.txt
-name|SimplePostTool
+name|t_web
 operator|.
 name|pageFetcher
 operator|.
@@ -1079,7 +1095,7 @@ name|MalformedURLException
 block|{
 name|assertFalse
 argument_list|(
-name|SimplePostTool
+name|t_web
 operator|.
 name|pageFetcher
 operator|.
@@ -1095,7 +1111,7 @@ argument_list|)
 expr_stmt|;
 name|assertTrue
 argument_list|(
-name|SimplePostTool
+name|t_web
 operator|.
 name|pageFetcher
 operator|.
@@ -1113,7 +1129,7 @@ name|assertTrue
 argument_list|(
 literal|"There should be two entries parsed from robots.txt"
 argument_list|,
-name|SimplePostTool
+name|t_web
 operator|.
 name|pageFetcher
 operator|.
@@ -1431,9 +1447,7 @@ name|put
 argument_list|(
 literal|"[ff01::114]"
 argument_list|,
-name|SimplePostTool
-operator|.
-name|pageFetcher
+name|super
 operator|.
 name|parseRobotsTxt
 argument_list|(
