@@ -432,16 +432,6 @@ name|org
 operator|.
 name|junit
 operator|.
-name|Ignore
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|junit
-operator|.
 name|Test
 import|;
 end_import
@@ -1754,8 +1744,6 @@ block|}
 block|}
 annotation|@
 name|Test
-annotation|@
-name|Ignore
 DECL|method|testTechproductsExample
 specifier|public
 name|void
@@ -1851,15 +1839,15 @@ decl_stmt|;
 for|for
 control|(
 name|int
-name|i
+name|pass
 init|=
 literal|0
 init|;
-name|i
+name|pass
 operator|<
 literal|2
 condition|;
-name|i
+name|pass
 operator|++
 control|)
 block|{
